[gd_scene load_steps=14 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemies/EnemyIdle.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/EnemyDeath1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemies/EnemyDeath2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemies/EnemyDeath3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Other/FinalDeath.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemies/EnemyMove1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Enemies/EnemyMove2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Enemies/EnemyMove3.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Enemies/EnemyMove4.png" type="Texture" id=10]
[ext_resource path="res://Sounds/hit.wav" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "Idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "Move",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 6 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="InstanceTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="InstanceTimer" to="." method="_on_InstanceTimer_timeout"]
